first round of Marko feedback edits

--- a/src/Sass/_typography.scss
+++ b/src/Sass/_typography.scss
@@ -15,6 +15,7 @@ h1 {
 
 h2 {
   font-size: 2.6rem;
+  line-height: 5.2rem;
 }
 
 h3 {
@@ -49,6 +50,7 @@ p {
 
 a {
   color: $darkGreen;
+  text-decoration: none;
 }
 
 .link {
